# ARMUE

./: .gitignore  README-Zh.md  README.md  test.rom
ARMUE/: CMakeLists.txt
ARMUE/source/: ARMUE.c  ARMUE.h  CMakeLists.txt  peripheral_monitor.c
ARMUE/source/arch/arm/: arm_gdb_stub.c  arm_gdb_stub.h  arm_v7m_ins_decode.c  arm_v7m_ins_decode.h  arm_v7m_ins_implement.c  arm_v7m_ins_implement.h  cm_NVIC.c  cm_NVIC.h  cm_system_control_space.c  cm_system_control_space.h  cm_systick.c  cm_systick.h  cpu_arm_cm3.c
ARMUE/source/core/: _file_operation.c  _types.h  config.h  cpu.c  cpu.h  error_code.h  exception_interrupt.c  exception_interrupt.h  memory_map.c  memory_map.h  module_helper.c  module_helper.h  peripheral.h  ram.c  ram.h  rom.c  rom.h  soc.c  soc.h  timer.c  timer.h
ARMUE/source/peripheral/: core_connect.c  core_connect.h  peripheral.c  peripheral.h  uart.c  uart.h
ARMUE/source/soc/arm/: lpc1768_uart.c  lpc1768_uart.h
ARMUE/source/test/: armv7m_instruction_test.c  speed_test.c
ARMUE/source/utils/: bheap.c  bheap.h  bstree.c  bstree.h  fifo.c  fifo.h  hash.c  hash.h  list.c  list.h
cortex_m3_test/: cortex_m3_test.axf  cortex_m3_test.hex  cortex_m3_test.htm  cortex_m3_test.map  cortex_m3_test.plg  cortex_m3_test.sct  cortex_m3_test.tra  cortex_m3_test.uvgui.zmj  cortex_m3_test.uvopt  cortex_m3_test.uvproj  cortex_m3_test_Target 1.dep  start.lst  start.s  startup_MPS_CM3.d  startup_MPS_CM3.lst  startup_MPS_CM3.s  startup_mps_cm3._ia  test.c  test.crf  test.d  test.txt
test_example/: disassambly.txt  ins_test.txt
vs2010_project/: ARMUE.eap  ARMUE.sln  ReadMe.txt  test.rom
vs2010_project/ARMUE/: ARMUE.cpp  ARMUE.vcxproj  ARMUE.vcxproj.filters  ReadMe.txt  _file_operation.cpp  _file_operation.h  _types.h  arm_v7m_ins_decode.cpp  arm_v7m_ins_decode.h  arm_v7m_ins_implement.cpp  bheap.cpp  (+22 more)
(+69 files in other folders)
